# zoltraak

./: .SourceSageignore  .all-contributorsrc  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  codetest.py  docker-compose.yml  pypi_update.sh  pyproject.toml  requirements.txt  setup.py  update_and_upload.sh  update_version.py
.github/: CODEOWNERS  settings.yml
docs/: NLProgramming_grammar..md  configuration.md  installation.md  research.md  troubleshooting.md  usage.md  video.md
experiments/: streaml.md  streaml1.md
requirements2/: def_aaa_management_system.md  def_apple_management_system.md  def_apple_peeling_requirement.md  def_arpaca_pet_shop_management_system.md  def_battery_online_shop_customer_management_system.md  def_boss_coffee_online_shop_customer_management_system.md  def_business_management_school_v1.md  def_castanets_online_shop_customer_management_system.md  def_cat_data_analysis_product.md  def_cat_data_analysis_product_v11.md  def_cat_data_analysis_product_v12.md  def_cat_data_analysis_product_v14.md  def_cat_data_analysis_product_v16.md  def_cat_data_analysis_product_v2.md  def_cat_data_analysis_product_v20.md  def_cat_data_analysis_product_v22.md  def_cat_data_analysis_product_v23.md  def_cat_data_analysis_product_v24.md  def_cat_data_analysis_product_v25.md  def_cat_data_analysis_product_v26.md  def_cat_data_analysis_product_v3.md  def_cat_data_analysis_product_v4.md  def_cat_data_analysis_product_v5.md  def_cat_data_analysis_product_v6.md  def_cat_data_analysis_product_v9.md  def_cat_pet_shop_management_system.md  (+163 more)
scripts/: run_tests.sh
(+94 files in other folders)
